# sr_grip

./: .gitignore  README.md  aws.yml
grip_api/: CMakeLists.txt  package.xml  setup.py
grip_api/gui_configs/: .gitignore
grip_api/launch/: manage_object.launch  start_framework.launch
grip_api/src/grip_api/abstract_graphics/: abstract_socket.py
grip_api/src/grip_api/abstract_widgets/: abstract_socket.py  base_editor_widget.py  base_text_editor.py
grip_api/src/grip_api/abstracts_widgets/: abstract_socket.py
grip_api/src/grip_api/config_widgets/: code_editors.py  component_editor_widgets.py  hardware_config_widget.py  interface_config_widgets.py  plain_editor_widgets.py  robot_interface_widget.py  settings_config_widget.py  user_entry_widgets.py
grip_api/src/grip_api/gui/: framework_gui.py  robot_integration_area.py  task_editor_area.py
grip_api/src/grip_api/task_editor_graphics/: connector.py  container.py  socket.py  state.py  state_content.py  state_machine.py  terminal_socket.py  view.py
grip_api/src/grip_api/task_editor_widgets/: connector.py  container.py  container_history.py  container_terminal_socket.py  graphical_editor_base.py  graphical_editor_widget.py  list_item_widgets.py  list_widgets.py  side_displayers.py  socket.py  state.py  state_config_widgets.py  state_content_widget.py  state_machine.py  state_socket.py  task_editor_clipboard.py  task_editor_mdi.py  terminal_socket.py
grip_api/src/grip_api/utils/: common_checks.py  common_dialog_boxes.py  exceptions.py  files_specifics.py  formatted_print.py
grip_api/task_constructor_scripts/: pick_and_hold.yaml  simulation_pick.yaml
grip_api/tests/code_editors/: test_xml_code_editor.py  test_yaml_code_editor.py
grip_core/: .catkin_lint_ignore  .lintignore  CMakeLists.txt  package.xml  setup.py
grip_core/action/: Grasp.action
grip_core/include/grip_core/: acm_manager.hpp  gazebo_mapping.hpp  joint_state_manager.hpp  joint_trajectory_manager.hpp  message_utils.hpp  moveit_grasp_action_server.hpp  moveit_plan_manager.hpp  pose_stamped_manager.hpp  robot_pose_manager.hpp  standardised_grasp_manager.hpp
grip_core/include/modular_framework_core/: acm_manager.hpp  message_utils.hpp  pose_stamped_manager.hpp
grip_core/msg/: GraspCommand.msg  ManipulatorState.msg  RobotPose.msg  StandardisedGrasp.msg  TorqueIntensity.msg
grip_core/nodes/: acm_manager.cpp  add_sensors_tf2_frame.cpp  gazebo_mapping.cpp  joint_state_manager.cpp  joint_trajectory_manager.cpp  moveit_grasp_action_server.cpp  moveit_plan_manager.cpp  pose_stamped_manager.cpp  robot_pose_manager.cpp  standardised_grasp_manager.cpp
grip_core/spawners/: external_controllers_spawner.py  manage_object.py  robot_controllers_spawner.py
grip_core/src/grip_core/launch_file_generator/: launch_templater.py
grip_core/src/grip_core/state_machine_generator/: config_parser.py  state_descriptor.py  state_generator.py  state_machine_descriptor.py  state_machine_generator.py  templater.py
grip_core/src/grip_core/states/: allow_manipulator_collisions.py  counter.py  grasp.py  move.py  plan.py  reinitialise_managers.py  select.py  wait_for.py  wait_for_signal.py
grip_core/src/grip_core/states/commander/: allow_collisions.py  allow_manipulator_collisions.py  compute_plan.py  execute_trajectory.py  move.py  plan.py
grip_core/src/grip_core/utils/: common_paths.py  file_parsers.py  manager_utils.py  message_utils.py
grip_core/srv/: AddGazeboMapping.srv  AddJointState.srv  AddJointTrajectory.srv  AddMoveitPlan.srv  AddPoseStamped.srv  AddRobotPose.srv  AddStandardisedGrasp.srv  DeleteGazeboMapping.srv  GetGazeboType.srv  GetJointState.srv  GetJointTrajectory.srv  GetModifiedACM.srv  GetMoveitPlan.srv  GetPoseStamped.srv  GetRobotPose.srv  GetStandardisedGrasp.srv  ModifyACM.srv  ReinitManager.srv  SetInitACM.srv  UpdateACMEntry.srv
grip_core/state_machine_generator/: config_parser.py  state_descriptor.py  state_machine_descriptor.py  state_machine_generator.py  templater.py
grip_core/templates/base/: base_state_machine.template
grip_core/templates/launch_file/: framework_launch.template
grip_core/templates/state_machines/: concurrent_state_machine.template  state_machine.template
grip_core/templates/states/: external_component.template  sensor.template
grip_core/utils/: message_utils.cpp
