<?xml version="1.0"?>
<package format="2">
  <name>grip_api</name>
  <version>0.0.1</version>
  <description>Package containing the Graphical User Interface of the GRIP framework</description>

  <maintainer email="software@shadowrobot.com">Shadow Software Team</maintainer>
  <license>GPLv2</license>
  <author email="brice@shadowrobot.com">Brice Denoun</author>


  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>

  <export>
  </export>

</package>
