<?xml version="1.0"?>
<!--
 Copyright 2023 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package format="2">
  <name>grip_api</name>
  <version>0.0.1</version>
  <description>Package containing the Graphical User Interface of the GRIP framework</description>

  <maintainer email="software@shadowrobot.com">Shadow Software Team</maintainer>
  <license>GPLv2</license>
  <author email="brice@shadowrobot.com">Brice Denoun</author>


  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>

  <export>
  </export>

</package>
