<?xml version="1.0"?>
<package format="2">
  <name>grip_core</name>
  <version>0.0.1</version>
  <description>Package containing the core of the GRIP framework</description>

  <maintainer email="software@shadowrobot.com">Shadow Software Team</maintainer>
  <license>GPLv2</license>
  <author email="brice@shadowrobot.com">Brice Denoun</author>


  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>trajectory_msgs</buildtool_depend>
  <buildtool_depend>moveit_ros_planning_interface</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <export>
  </export>

</package>
