<!--
 Copyright 2023 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<?xml version="1.0"?>
<package format="2">
  <name>grip_core</name>
  <version>0.0.1</version>
  <description>Package containing the core of the GRIP framework</description>

  <maintainer email="software@shadowrobot.com">Shadow Software Team</maintainer>
  <license>GPLv2</license>
  <author email="brice@shadowrobot.com">Brice Denoun</author>


  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>trajectory_msgs</buildtool_depend>
  <buildtool_depend>moveit_ros_planning_interface</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <export>
  </export>

</package>
